<resources>
    <string name="app_name">RunTracker</string>
    <string name="steps">Steps:</string>
    <string name="runtracker">RunTracker</string>
    <string name="kcal">kcal:</string>
    <string name="save">save</string>
    <string name="reset">reset</string>
    <string name="running_overview">running overview</string>
    <string name="running_overview_label">Running overview</string>
    <string name="date">Date</string>
    <string name="steps_table">Steps</string>
    <string name="kcal_table">Kcal</string>
    <string name="time">Time</string>
</resources>