<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity"
    android:background="#FFFFFF">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/banner_textview"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:text="@string/runtracker"
            android:textStyle="bold"
            android:textSize="30sp"
            android:gravity="center"
            android:background="#ffe6cc"
            android:textColor="#2d2d2d" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:layout_editor_absoluteX="1dp"
            tools:layout_editor_absoluteY="81dp"
            android:gravity="center_horizontal">
            <TextView
                android:id="@+id/steps_label_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/steps"
                android:textSize="25sp"
                android:gravity="center"
                android:textColor="#2d2d2d"
                android:layout_marginTop="20dp"/>
            <TextView
                android:id="@+id/steps_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="0"
                android:textSize="25sp"
                android:textStyle="bold"
                android:gravity="center"
                android:textColor="#2d2d2d"
                android:layout_marginTop="10dp"/>
            <TextView
                android:id="@+id/kcal_label_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/kcal"
                android:textSize="25sp"
                android:gravity="center"
                android:textColor="#2d2d2d"
                android:layout_marginTop="20dp"/>
            <TextView
                android:id="@+id/kcal_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="0"
                android:textSize="25sp"
                android:textStyle="bold"
                android:gravity="center"
                android:textColor="#2d2d2d"
                android:layout_marginTop="10dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_horizontal"
                android:layout_marginTop="20dp">
                <Button
                    android:id="@+id/reset_button"
                    android:layout_width="100dp"
                    android:layout_height="40dp"
                    android:text="@string/reset"
                    android:background="@drawable/button_background"
                    android:backgroundTint="#ffd3a1"
                    android:layout_margin="4dp"
                    android:textColor="@color/black"/>
                <Button
                    android:id="@+id/save_button"
                    android:layout_width="100dp"
                    android:layout_height="40dp"
                    android:background="@drawable/button_background"
                    android:backgroundTint="#ffd3a1"
                    android:text="@string/save"
                    android:layout_margin="4dp"
                    android:textColor="@color/black"/>
            </LinearLayout>
            <Button
                android:id="@+id/running_overview_button"
                android:layout_width="208dp"
                android:layout_height="40dp"
                android:background="@drawable/button_background"
                android:backgroundTint="#ffd3a1"
                android:text="@string/running_overview"
                android:layout_margin="4dp"
                android:textColor="@color/black"/>

        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>